# pompeii-rs

./: Cargo.toml  README.md  rustfmt.toml  setup_env.sh
.github/workflows/: rust.yml
bevy_pompeii/: Cargo.toml
bevy_pompeii/src/: accel_struct.rs  acceleration_structure.rs  gltf_loader.rs  lib.rs  mesh.rs  setup.rs  swapchain_recreation.rs  utils.rs
examples/: Cargo.toml  basic_bevy_app.rs  setup_hal.rs  slt.rs
examples/assets/: BetterCube.glb
pompeii/: Cargo.toml
pompeii-hal/: Cargo.toml
pompeii-hal-backend-vulkan/: Cargo.toml
pompeii-hal-backend-vulkan/src/: alloc.rs  builder.rs  debug_utils.rs  initializer.rs  lib.rs  physical_device.rs  queues.rs  setup.rs
pompeii-hal-backend-vulkan/src/setup/: builder.rs  initializer.rs  physical_device.rs  queues_finder.rs
pompeii-hal/src/: alloc.rs  builder.rs  lib.rs  setup.rs  tasks.rs
pompeii-hal/src/setup/: initializer.rs
pompeii-task/: Cargo.toml
pompeii-task/src/: lib.rs
pompeii/src/: acceleration_structure.rs  alloc.rs  commands.rs  debug_utils.rs  descriptor_sets.rs  images.rs  lib.rs  mesh.rs  render.rs  setup.rs  store.rs  swapchain.rs  sync.rs  utils.rs
pompeii/src/setup/: builder.rs  extensions.rs  initializer.rs  physical_device.rs  queues_finder.rs
