[package]
name = "bevy_pompeii"
version = "0.1.0"
edition = "2021"

[dependencies]
pompeii = { path = "../pompeii", version = "0.1.0" }
bevy_app = { version = "^0.6", default-features = false }
bevy_core = { version = "^0.6", default-features = false }
bevy_ecs = { version = "^0.6", default-features = false }
bevy_window = { version = "^0.6", default-features = false }

log = "^0.4"
