[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
bevy = { version = "^0.6", default-features = false }
bevy_pompeii = { version = "=0.1.0", path = "../bevy_pompeii" }

simplelog = "^0.11.1"
anyhow = "^1.0.51"

[[example]]
name = "basic_bevy_app"
path = "basic_bevy_app.rs"
