[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
bevy = { version = "^0.6", default-features = false, features = ["x11"] }
bevy_pompeii = { version = "=0.1.0", path = "../bevy_pompeii" }

anyhow = "^1.0"

[[example]]
name = "basic_bevy_app"
path = "basic_bevy_app.rs"
