[package]
name = "pompeii"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
description = "RESERVED for Vulkan renderer"
homepage = "https://github.com/icanwalkonwater/pompeii-rs"
repository = "https://github.com/icanwalkonwater/pompeii-rs"
readme = "../README.md"
keywords = []

[dependencies]
ash = "^0.33.3"
vk-mem = { version = "^0.2", git = "https://github.com/icanwalkonwater/vk-mem-rs.git" }

log = "^0.4.14"
thiserror = "^1.0.30"
parking_lot = "^0.11.2"
