[package]
name = "pompeii"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
description = "RESERVED for Vulkan renderer"
homepage = "https://github.com/icanwalkonwater/pompeii-rs"
repository = "https://github.com/icanwalkonwater/pompeii-rs"
readme = "../README.md"
keywords = []

[dependencies]
ash = "0.37"
ash-window = "0.10"
raw-window-handle = "0.4"
vk-mem = { version = "=0.2.3", git = "https://github.com/icanwalkonwater/vk-mem-rs.git" }
vk-sync-fork = "0.4"

log = "0.4"
thiserror = "1.0"
parking_lot = "0.11"
once_cell = "1.9"
